# pearl_life

./: CMakeLists.txt  README.md  readme.md
.history/: README_20220716185301.md  README_20220716185344.md  README_20220716185426.md  README_20220716185559.md  README_20220716185630.md  README_20220716185643.md
back_end/user_server/user_server_node/: manage.py
back_end/user_server/user_server_node/app1/: views.py
back_end/user_server/user_server_node/user_server_node/: asgi.py  settings.py  urls.py  wsgi.py
document/book/: 1.1gcc+gdb.md  1.4git.md
document/memorandum/: peal_log.md
kernel/: BUILD.bazel  WORKSPACE  pearl_public.cpp  pearl_public.h  pearl_public.hpp  pearl_shell.md
kernel/common_tools/: CMakeLists.txt
kernel/common_tools/async_request/: BUILD  async_dns_client_noblock.cpp  sync_dns_client-课上手写.c  sync_dns_client.cpp
kernel/common_tools/log/log4cpp/: config.status  libtool
kernel/common_tools/log/muduo_log/: CMakeLists.txt  README.md  main_log_test.cc
kernel/common_tools/log/test_case/: 1-file_test.cpp  2-test_log4cpp.cpp  3-test_log4cpp copy.cpp  3-test_log4cpp.conf  3-test_log4cpp.cpp  4-RollingFileAppender.cpp  (+1 more)
kernel/common_tools/my_algorithm/: start.sh
kernel/common_tools/nocopy/: nocopyable.h
kernel/common_tools/thread_pool/: test.cpp  thread_pool.cpp  thread_pool.h
kernel/common_tools/time_calc/: test_case.cpp  time_interval.hpp
kernel/totuial/: calc.h  calc_multi.hpp  calc_origin.hpp  main.cpp  main_two.cpp  test  test.cpp
test/: 2023-1-9_log.txt  BUILD.bazel  a  pearl_public.hpp  test_log.cpp  test_singleton.cpp
(+1015 files in other folders)
